sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho define_registro variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 tipo: T_LOGICO
    6     | T_INTEIRO
    7     | T_REGISTRO T_IDENTIF

    8 define_registro: define define_registro
    9                | ε

   10 define: T_DEF definicao_campos T_FIMDEF T_IDENTIF

   11 definicao_campos: tipo lista_campos definicao_campos
   12                 | tipo lista_campos

   13 lista_campos: lista_campos T_IDENTIF
   14             | T_IDENTIF

   15 variaveis: ε
   16          | declaracao_variaveis

   17 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   18                     | tipo lista_variaveis

   19 lista_variaveis: lista_variaveis T_IDENTIF
   20                | T_IDENTIF

   21 lista_comandos: ε
   22               | comando lista_comandos

   23 comando: entrada_saida
   24        | atribuicao
   25        | selecao
   26        | repeticao

   27 entrada_saida: entrada
   28              | saida

   29 entrada: T_LEIA T_IDENTIF

   30 saida: T_ESCREVA expressao

   31 $@3: ε

   32 atribuicao: expressao_acesso $@3 T_ATRIB expressao

   33 $@4: ε

   34 $@5: ε

   35 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

   36 $@6: ε

   37 $@7: ε

   38 repeticao: T_ENQTO $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

   39 expressao: expressao T_VEZES expressao
   40          | expressao T_DIV expressao
   41          | expressao T_MAIS expressao
   42          | expressao T_MENOS expressao
   43          | expressao T_MAIOR expressao
   44          | expressao T_MENOR expressao
   45          | expressao T_IGUAL expressao
   46          | expressao T_E expressao
   47          | expressao T_OU expressao
   48          | termo

   49 expressao_acesso: T_IDENTIF

   50 $@8: ε

   51 expressao_acesso: T_IDPONTO $@8 expressao_acesso

   52 termo: expressao_acesso
   53      | T_NUMERO
   54      | T_V
   55      | T_F
   56      | T_NAO termo
   57      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_DEF (258) 10
    T_REGISTRO (259) 7
    T_FIMDEF (260) 10
    T_IDPONTO (261) 51
    T_PROGRAMA (262) 4
    T_INICIO (263) 3
    T_FIM (264) 3
    T_IDENTIF (265) 4 7 10 13 14 19 20 29 49
    T_LEIA (266) 29
    T_ESCREVA (267) 30
    T_ENQTO (268) 38
    T_FACA (269) 38
    T_ENTAO (270) 35
    T_FIMENQTO (271) 38
    T_SE (272) 35
    T_SENAO (273) 35
    T_FIMSE (274) 35
    T_ATRIB (275) 32
    T_VEZES (276) 39
    T_DIV (277) 40
    T_MAIS (278) 41
    T_MENOS (279) 42
    T_MAIOR (280) 43
    T_MENOR (281) 44
    T_IGUAL (282) 45
    T_E (283) 46
    T_OU (284) 47
    T_V (285) 54
    T_F (286) 55
    T_NUMERO (287) 53
    T_NAO (288) 56
    T_ABRE (289) 57
    T_FECHA (290) 57
    T_LOGICO (291) 5
    T_INTEIRO (292) 6


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 3
        on right: 0
    $@1 (40)
        on left: 1
        on right: 3
    $@2 (41)
        on left: 2
        on right: 3
    cabecalho (42)
        on left: 4
        on right: 3
    tipo (43)
        on left: 5 6 7
        on right: 11 12 17 18
    define_registro (44)
        on left: 8 9
        on right: 3 8
    define (45)
        on left: 10
        on right: 8
    definicao_campos (46)
        on left: 11 12
        on right: 10 11
    lista_campos (47)
        on left: 13 14
        on right: 11 12 13
    variaveis (48)
        on left: 15 16
        on right: 3
    declaracao_variaveis (49)
        on left: 17 18
        on right: 16 17
    lista_variaveis (50)
        on left: 19 20
        on right: 17 18 19
    lista_comandos (51)
        on left: 21 22
        on right: 3 22 35 38
    comando (52)
        on left: 23 24 25 26
        on right: 22
    entrada_saida (53)
        on left: 27 28
        on right: 23
    entrada (54)
        on left: 29
        on right: 27
    saida (55)
        on left: 30
        on right: 28
    atribuicao (56)
        on left: 32
        on right: 24
    $@3 (57)
        on left: 31
        on right: 32
    selecao (58)
        on left: 35
        on right: 25
    $@4 (59)
        on left: 33
        on right: 35
    $@5 (60)
        on left: 34
        on right: 35
    repeticao (61)
        on left: 38
        on right: 26
    $@6 (62)
        on left: 36
        on right: 38
    $@7 (63)
        on left: 37
        on right: 38
    expressao (64)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 30 32 35 38 39 40 41 42 43 44 45 46 47 57
    expressao_acesso (65)
        on left: 49 51
        on right: 32 51 52
    $@8 (66)
        on left: 50
        on right: 51
    termo (67)
        on left: 52 53 54 55 56 57
        on right: 48 56


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • define_registro variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_DEF  shift, and go to state 6

    $default  reduce using rule 9 (define_registro)

    define_registro  go to state 7
    define           go to state 8


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

   10 define: T_DEF • definicao_campos T_FIMDEF T_IDENTIF

    T_REGISTRO  shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_INTEIRO   shift, and go to state 11

    tipo              go to state 12
    definicao_campos  go to state 13


State 7

    3 programa: cabecalho define_registro • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_REGISTRO  shift, and go to state 9
    T_LOGICO    shift, and go to state 10
    T_INTEIRO   shift, and go to state 11

    $default  reduce using rule 15 (variaveis)

    tipo                  go to state 14
    variaveis             go to state 15
    declaracao_variaveis  go to state 16


State 8

    8 define_registro: define • define_registro

    T_DEF  shift, and go to state 6

    $default  reduce using rule 9 (define_registro)

    define_registro  go to state 17
    define           go to state 8


State 9

    7 tipo: T_REGISTRO • T_IDENTIF

    T_IDENTIF  shift, and go to state 18


State 10

    5 tipo: T_LOGICO •

    $default  reduce using rule 5 (tipo)


State 11

    6 tipo: T_INTEIRO •

    $default  reduce using rule 6 (tipo)


State 12

   11 definicao_campos: tipo • lista_campos definicao_campos
   12                 | tipo • lista_campos

    T_IDENTIF  shift, and go to state 19

    lista_campos  go to state 20


State 13

   10 define: T_DEF definicao_campos • T_FIMDEF T_IDENTIF

    T_FIMDEF  shift, and go to state 21


State 14

   17 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
   18                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 22

    lista_variaveis  go to state 23


State 15

    3 programa: cabecalho define_registro variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 1 ($@1)

    $@1  go to state 24


State 16

   16 variaveis: declaracao_variaveis •

    $default  reduce using rule 16 (variaveis)


State 17

    8 define_registro: define define_registro •

    $default  reduce using rule 8 (define_registro)


State 18

    7 tipo: T_REGISTRO T_IDENTIF •

    $default  reduce using rule 7 (tipo)


State 19

   14 lista_campos: T_IDENTIF •

    $default  reduce using rule 14 (lista_campos)


State 20

   11 definicao_campos: tipo lista_campos • definicao_campos
   12                 | tipo lista_campos •
   13 lista_campos: lista_campos • T_IDENTIF

    T_REGISTRO  shift, and go to state 9
    T_IDENTIF   shift, and go to state 25
    T_LOGICO    shift, and go to state 10
    T_INTEIRO   shift, and go to state 11

    $default  reduce using rule 12 (definicao_campos)

    tipo              go to state 12
    definicao_campos  go to state 26


State 21

   10 define: T_DEF definicao_campos T_FIMDEF • T_IDENTIF

    T_IDENTIF  shift, and go to state 27


State 22

   20 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 20 (lista_variaveis)


State 23

   17 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
   18                     | tipo lista_variaveis •
   19 lista_variaveis: lista_variaveis • T_IDENTIF

    T_REGISTRO  shift, and go to state 9
    T_IDENTIF   shift, and go to state 28
    T_LOGICO    shift, and go to state 10
    T_INTEIRO   shift, and go to state 11

    $default  reduce using rule 18 (declaracao_variaveis)

    tipo                  go to state 14
    declaracao_variaveis  go to state 29


State 24

    3 programa: cabecalho define_registro variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  shift, and go to state 30


State 25

   13 lista_campos: lista_campos T_IDENTIF •

    $default  reduce using rule 13 (lista_campos)


State 26

   11 definicao_campos: tipo lista_campos definicao_campos •

    $default  reduce using rule 11 (definicao_campos)


State 27

   10 define: T_DEF definicao_campos T_FIMDEF T_IDENTIF •

    $default  reduce using rule 10 (define)


State 28

   19 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 19 (lista_variaveis)


State 29

   17 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 17 (declaracao_variaveis)


State 30

    3 programa: cabecalho define_registro variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_LEIA     shift, and go to state 33
    T_ESCREVA  shift, and go to state 34
    T_ENQTO    shift, and go to state 35
    T_SE       shift, and go to state 36

    $default  reduce using rule 21 (lista_comandos)

    lista_comandos    go to state 37
    comando           go to state 38
    entrada_saida     go to state 39
    entrada           go to state 40
    saida             go to state 41
    atribuicao        go to state 42
    selecao           go to state 43
    repeticao         go to state 44
    expressao_acesso  go to state 45


State 31

   51 expressao_acesso: T_IDPONTO • $@8 expressao_acesso

    $default  reduce using rule 50 ($@8)

    $@8  go to state 46


State 32

   49 expressao_acesso: T_IDENTIF •

    $default  reduce using rule 49 (expressao_acesso)


State 33

   29 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 47


State 34

   30 saida: T_ESCREVA • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 53
    expressao_acesso  go to state 54
    termo             go to state 55


State 35

   38 repeticao: T_ENQTO • $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

    $default  reduce using rule 36 ($@6)

    $@6  go to state 56


State 36

   35 selecao: T_SE • expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 57
    expressao_acesso  go to state 54
    termo             go to state 55


State 37

    3 programa: cabecalho define_registro variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  shift, and go to state 58


State 38

   22 lista_comandos: comando • lista_comandos

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_LEIA     shift, and go to state 33
    T_ESCREVA  shift, and go to state 34
    T_ENQTO    shift, and go to state 35
    T_SE       shift, and go to state 36

    $default  reduce using rule 21 (lista_comandos)

    lista_comandos    go to state 59
    comando           go to state 38
    entrada_saida     go to state 39
    entrada           go to state 40
    saida             go to state 41
    atribuicao        go to state 42
    selecao           go to state 43
    repeticao         go to state 44
    expressao_acesso  go to state 45


State 39

   23 comando: entrada_saida •

    $default  reduce using rule 23 (comando)


State 40

   27 entrada_saida: entrada •

    $default  reduce using rule 27 (entrada_saida)


State 41

   28 entrada_saida: saida •

    $default  reduce using rule 28 (entrada_saida)


State 42

   24 comando: atribuicao •

    $default  reduce using rule 24 (comando)


State 43

   25 comando: selecao •

    $default  reduce using rule 25 (comando)


State 44

   26 comando: repeticao •

    $default  reduce using rule 26 (comando)


State 45

   32 atribuicao: expressao_acesso • $@3 T_ATRIB expressao

    $default  reduce using rule 31 ($@3)

    $@3  go to state 60


State 46

   51 expressao_acesso: T_IDPONTO $@8 • expressao_acesso

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32

    expressao_acesso  go to state 61


State 47

   29 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 29 (entrada)


State 48

   54 termo: T_V •

    $default  reduce using rule 54 (termo)


State 49

   55 termo: T_F •

    $default  reduce using rule 55 (termo)


State 50

   53 termo: T_NUMERO •

    $default  reduce using rule 53 (termo)


State 51

   56 termo: T_NAO • termo

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao_acesso  go to state 54
    termo             go to state 62


State 52

   57 termo: T_ABRE • expressao T_FECHA

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 63
    expressao_acesso  go to state 54
    termo             go to state 55


State 53

   30 saida: T_ESCREVA expressao •
   39 expressao: expressao • T_VEZES expressao
   40          | expressao • T_DIV expressao
   41          | expressao • T_MAIS expressao
   42          | expressao • T_MENOS expressao
   43          | expressao • T_MAIOR expressao
   44          | expressao • T_MENOR expressao
   45          | expressao • T_IGUAL expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 64
    T_DIV    shift, and go to state 65
    T_MAIS   shift, and go to state 66
    T_MENOS  shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72

    $default  reduce using rule 30 (saida)


State 54

   52 termo: expressao_acesso •

    $default  reduce using rule 52 (termo)


State 55

   48 expressao: termo •

    $default  reduce using rule 48 (expressao)


State 56

   38 repeticao: T_ENQTO $@6 • expressao T_FACA $@7 lista_comandos T_FIMENQTO

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 73
    expressao_acesso  go to state 54
    termo             go to state 55


State 57

   35 selecao: T_SE expressao • T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE
   39 expressao: expressao • T_VEZES expressao
   40          | expressao • T_DIV expressao
   41          | expressao • T_MAIS expressao
   42          | expressao • T_MENOS expressao
   43          | expressao • T_MAIOR expressao
   44          | expressao • T_MENOR expressao
   45          | expressao • T_IGUAL expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 74
    T_VEZES  shift, and go to state 64
    T_DIV    shift, and go to state 65
    T_MAIS   shift, and go to state 66
    T_MENOS  shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72


State 58

    3 programa: cabecalho define_registro variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 75


State 59

   22 lista_comandos: comando lista_comandos •

    $default  reduce using rule 22 (lista_comandos)


State 60

   32 atribuicao: expressao_acesso $@3 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 76


State 61

   51 expressao_acesso: T_IDPONTO $@8 expressao_acesso •

    $default  reduce using rule 51 (expressao_acesso)


State 62

   56 termo: T_NAO termo •

    $default  reduce using rule 56 (termo)


State 63

   39 expressao: expressao • T_VEZES expressao
   40          | expressao • T_DIV expressao
   41          | expressao • T_MAIS expressao
   42          | expressao • T_MENOS expressao
   43          | expressao • T_MAIOR expressao
   44          | expressao • T_MENOR expressao
   45          | expressao • T_IGUAL expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao
   57 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 64
    T_DIV    shift, and go to state 65
    T_MAIS   shift, and go to state 66
    T_MENOS  shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72
    T_FECHA  shift, and go to state 77


State 64

   39 expressao: expressao T_VEZES • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 78
    expressao_acesso  go to state 54
    termo             go to state 55


State 65

   40 expressao: expressao T_DIV • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 79
    expressao_acesso  go to state 54
    termo             go to state 55


State 66

   41 expressao: expressao T_MAIS • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 80
    expressao_acesso  go to state 54
    termo             go to state 55


State 67

   42 expressao: expressao T_MENOS • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 81
    expressao_acesso  go to state 54
    termo             go to state 55


State 68

   43 expressao: expressao T_MAIOR • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 82
    expressao_acesso  go to state 54
    termo             go to state 55


State 69

   44 expressao: expressao T_MENOR • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 83
    expressao_acesso  go to state 54
    termo             go to state 55


State 70

   45 expressao: expressao T_IGUAL • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 84
    expressao_acesso  go to state 54
    termo             go to state 55


State 71

   46 expressao: expressao T_E • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 85
    expressao_acesso  go to state 54
    termo             go to state 55


State 72

   47 expressao: expressao T_OU • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 86
    expressao_acesso  go to state 54
    termo             go to state 55


State 73

   38 repeticao: T_ENQTO $@6 expressao • T_FACA $@7 lista_comandos T_FIMENQTO
   39 expressao: expressao • T_VEZES expressao
   40          | expressao • T_DIV expressao
   41          | expressao • T_MAIS expressao
   42          | expressao • T_MENOS expressao
   43          | expressao • T_MAIOR expressao
   44          | expressao • T_MENOR expressao
   45          | expressao • T_IGUAL expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao

    T_FACA   shift, and go to state 87
    T_VEZES  shift, and go to state 64
    T_DIV    shift, and go to state 65
    T_MAIS   shift, and go to state 66
    T_MENOS  shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72


State 74

   35 selecao: T_SE expressao T_ENTAO • $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    $default  reduce using rule 33 ($@4)

    $@4  go to state 88


State 75

    3 programa: cabecalho define_registro variaveis $@1 T_INICIO lista_comandos T_FIM $@2 •

    $default  reduce using rule 3 (programa)


State 76

   32 atribuicao: expressao_acesso $@3 T_ATRIB • expressao

    T_IDPONTO  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 48
    T_F        shift, and go to state 49
    T_NUMERO   shift, and go to state 50
    T_NAO      shift, and go to state 51
    T_ABRE     shift, and go to state 52

    expressao         go to state 89
    expressao_acesso  go to state 54
    termo             go to state 55


State 77

   57 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 57 (termo)


State 78
